* modify it under the terms of the GNU AFFERO GENERAL PUBLIC LICENSE
* License as published by the Free Software Foundation; either
* version 3 of the license, or any later version.
*
* This library is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU AFFERO GENERAL PUBLIC LICENSE for more details.
*
* You should have received a copy of the GNU Affero General Public
* License along with this library.
* If not, see <http://www.gnu.org/licenses/>.
*****

Changelog: 
* Sun Apr 07 2013 Christian Reiner: version 0.1.12
Fixed reference to another app that crashed OC. 
* Sat Apr 06 2013 Christian Reiner: version 0.1.11
Fixed content access during login for OC>=5.
Fixed styles and layout in content display.
Fixed sloppy user role evaluation.
* Wed Mar 20 2013 Christian Reiner: version 0.1.10
Allow direct activation in ownCloud5 based installations. 
* Fri Mar 01 2013 Christian Reiner: version 0.1.9
Some general security fix to the apps framework.
* Mon Feb 18 2013 Christian Reiner: version 0.1.8
Compatibility to ownCloud version 5.
* Tue Jan 29 2013 Christian Reiner: version 0.1.7
Changed requirement of OC version from 4.0 to 4.5 (4.9).
* Fri Jan 18 2013 Christian Reiner: version 0.1.6
Convert plain text content to simple markup to preserve linebreaks.
* Fri Dec 07 2012 Christian Reiner: version 0.1.5
Fixed usage for non-admin users.
Simplyfied initialization without explicit ajax call.
* Sun Aug 12 2012 Christian Reiner: version 0.1.4
Small additional usage hint in the configuration.
* Sat Aug 11 2012 Christian Reiner: version 0.1.3
Fixed reference url to use propper syntax in all cases.
* Fri Aug 10 2012 Christian Reiner: version 0.1.2
Fixed reference url to use propper syntax in a special case.
* Thu Aug 09 2012 Christian Reiner: version 0.1.1
Fixed german translation.
* Wed Aug 08 2012 Christian Reiner: version 0.1.0
Initial release.