@@ -39,7 +39,7 @@
 		The imprints content can be configured using plain text or html markup.
 		The app is simple but sufficient for the purpose. 
 	</description>
-	<version>0.1.12</version>
+	<version>0.1.13</version>
 	<licence>AGPL</licence>
 	<author>Christian Reiner</author>
 	<require>4.93</require>
